--- a/video.css
+++ b/video.css
@@ -61,13 +61,13 @@ header nav ul li a {
     text-decoration: none;
     color: #eee;
     font-weight: bold;
-    font-size: 1.3em;
+    font-size: 1.35em;
     transition: color 0.3s;
 }
 
 header nav ul li a.active,
 header nav ul li a:hover {
-    color: #f1683a;
+    color: #ff000097;
 }
 
 /* Page Title Section */
